--- a/index.html
+++ b/index.html
@@ -1,29 +1,100 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mi página web</title>
-  <link rel="stylesheet" type="text/css" href="css/estilos.css">
+  <title>Mi Portafolio</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      background-color: #A72222;
+    }
+
+    header {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+
+    h1 {
+      font-size: 32px;
+      margin-bottom: 10px;
+      color: #ffffff;
+    }
+
+    .section {
+      margin-bottom: 40px;
+      background-color: #FFCB3E;
+      padding: 20px;
+      border-radius: 5px;
+      box-shadow: 0 2px 4px #ffffff;
+    }
+
+    h2 {
+      font-size: 24px;
+      margin-bottom: 20px;
+      color:#000000;
+    }
+
+    p {
+      font-size: 16px;
+      margin-bottom: 20px;
+      color: #000000;
+    }
+
+    ul {
+      list-style-type: disc;
+      margin-left: 20px;
+    }
+
+    li {
+      font-size: 16px;
+      margin-bottom: 10px;
+      color: #000000;
+    }
+    /* Estilos adicionales para la imagen de la cabecera */
+    .header-image {
+      width: 150px; /* Ajusta el tamaño deseado */
+      height: 150px; /* Ajusta el tamaño deseado */
+      border-radius: 50%;
+      object-fit: cover;
+      object-position: center;
+      margin-bottom: 20px;
+    }
+  </style>
 </head>
 <body>
   <header>
-    <h1>Bienvenido a mi página web</h1>
+    <img src="img/Bray.jpeg" alt="Mi Imagen de Cabecera" class="header-image">
+    <h1>Bray Anthony</h1>
   </header>
-  
-  <nav>
+
+  <section class="section">
+    <h2>Sobre mí</h2>
+    <p>Creador de contenido y branding apasionado. Experiencia con Sumak Studios, Feria de Muebles, Teus Web y Stor Solutions. Creando mi marca personal.</p>
+  </section>
+
+  <section class="section">
+    <h2>Proyectos destacados</h2>
     <ul>
-      <li><a href="#">Inicio</a></li>
-      <li><a href="#">Acerca de</a></li>
-      <li><a href="#">Contacto</a></li>
+      <li>Sumak Studio</li>
+      <li>Feria de Muebles</li>
+      <li>Stor Solutions</li>
     </ul>
-  </nav>
-  
-  <main>
-    <h2>Acerca de mí</h2>
-    <p>Soy un apasionado del desarrollo web y me encanta crear páginas increíbles.</p>
-  </main>
-  
-  <footer>
-    <p>Derechos de autor &copy; 2023 Mi página web</p>
-  </footer>
+  </section>
+
+  <section class="section">
+    <h2>Habilidades</h2>
+    <ul>
+      <li>CapCut</li>
+      <li>Davinci Resolve</li>
+      <li>Adobe Illustrator</li>
+    </ul>
+  </section>
+
+  <section class="section">
+    <h2>Contacto</h2>
+    <p>Email: bray_antony@hotmail.com</p>
+    <p>Teléfono: +593 09855557657</p>
+  </section>
 </body>
 </html>
