--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
   <header>
     <img src="img/Bray.jpeg" alt="Mi Imagen de Cabecera" class="header-image">
     <h1>Bray Anthony</h1>
+    
+    <!-- Enlaces a tus redes sociales -->
+    <div class="social-media">
+      <a href="https://www.facebook.com/bray.mejia/" target="_blank"><img src="img/facebook-icon.png" alt="Facebook"></a>
+      <a href="https://twitter.com/BrayAnthony9" target="_blank"><img src="img/twitter-icon.png" alt="Twitter"></a>
+      <a href="https://www.instagram.com/bray_antony/" target="_blank"><img src="img/instagram-icon.png" alt="Instagram"></a>
+    </div>
   </header>
 
   <section class="section">
