--- a/index.html
+++ b/index.html
@@ -273,7 +273,30 @@
       p {
         font-size: 14px;
       }
-    }
+/* Estilos para dispositivos móviles */
+@media (max-width: 767px) {
+  /* Agrega aquí tus estilos específicos para dispositivos móviles */
+  body {
+    font-size: 14px;
+  }
+}
+
+/* Estilos para tabletas y dispositivos con pantalla más grande */
+@media (min-width: 768px) {
+  /* Agrega aquí tus estilos específicos para tabletas y dispositivos con pantalla más grande */
+  body {
+    font-size: 16px;
+  }
+}
+
+/* Estilos para pantallas de escritorio o portátiles grandes */
+@media (min-width: 1024px) {
+  /* Agrega aquí tus estilos específicos para pantallas de escritorio o portátiles grandes */
+  body {
+    font-size: 18px;
+  }
+}
+
   </style>
 </head>
 <body>
